Closed Bug 1816911 Opened 2 years ago Closed 2 years ago

Visibility logic is wrong in SVGGeometryFrame

Categories

(Core :: SVG, defect)

defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox110 --- wontfix
firefox111 --- wontfix
firefox112 --- fixed

People

(Reporter: longsonr, Assigned: longsonr)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Presumably things that should not be active, will end up being active. Or the active bounds will be too big.

Assignee: nobody → longsonr
Status: NEW → ASSIGNED
Regressed by: 1753404

Set release status flags based on info from the regressing bug 1753404

Pushed by longsonr@gmail.com: https://hg.mozilla.org/integration/autoland/rev/5e840329fc39 Visibility logic is wrong in SVGGeometryFrame r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch

The patch landed in nightly and beta is affected.
:longsonr, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox111 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(longsonr)
Flags: needinfo?(longsonr)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: