Bug 1816911 - Visibility logic is wrong in SVGGeometryFrame r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D169915